Completo. Inizio bonus

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
                 <img src="logo.png" alt="logo" />
             </div>
         </header>
-        <div class="cds-container container">
-            <!-- Disco ad esempio -->
+        <div class="cds-container container"></div>
+        <!-- template con handlebars -->
+        <script id="card-cd" type="text/x-handlebars-template">
             <div class="cd">
-                <img src="https://upload.wikimedia.org/wikipedia/en/9/9f/Ten_Summoner%27s_Tales.jpg" alt="">
-                <h3>Ten's Summoners Tales</h3>
-                <span class="author">Sting</span>
-                <span class="year">1993</span>
+                <img src="{{src}}" alt="">
+                <h3>{{titolo}}</h3>
+                <span class="author">{{autore}}</span>
+                <span class="year">{{anno}}</span>
             </div>
-        </div>
+        </script>
         <script src="main.js" charset="utf-8"></script>
     </body>
 </html>
