Aggiunto placeholder al nome delle immagini

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!-- template con handlebars -->
         <script id="card-cd" type="text/x-handlebars-template">
             <div class="cd active" data-genere="{{genere}}">
-                <img src="{{image}}" alt="">
+                <img src="{{image}}" alt="{{titolo}}">
                 <h3>{{titolo}}</h3>
                 <span class="author">{{autore}}</span>
                 <span class="year">{{anno}}</span>
