Invertite le condizioni del bonus

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="select-container">
                     <label for="generi">Seleziona un genere:</label>
                     <select id="genre-select">
-                        <option value="all">All</option>
+                        <option value="">All</option>
                         <option value="rock">Rock</option>
                         <option value="pop">Pop</option>
                         <option value="jazz">Jazz</option>
