--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
             <div class="container">
-                <img src="logo.png" alt="logo">
+                <img src="img/logo.png" alt="logo">
                 <div class="select-container">
                     <label for="generi">Seleziona un genere:</label>
                     <select id="genre-select">
@@ -34,6 +34,6 @@
                 <span class="year">{{anno}}</span>
             </div>
         </script>
-        <script src="main.js" charset="utf-8"></script>
+        <script src="js/main.js" charset="utf-8"></script>
     </body>
 </html>
